@@ -1,3 +1,8 @@
+2020-03-23 Wiley E. Hill <wileyhill@gmail.com>
+
+    * tests/test_image_menu_item.c: Add check for function
+      geda_image_menu_item_set_accel_group.
+
 2020-03-20 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_menu.c: Add ancillary variable page_size and upper
